--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.4.2",
+    "@mui/material": "^5.4.3",
     "axios": "^0.26.0",
+    "date-fn": "^0.0.2",
     "mongoose": "^6.2.3",
     "next": "latest",
     "react": "^17.0.2",
