--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^1.7.2",
     "axios": "^0.26.0",
     "date-fn": "^0.0.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.3",
     "next": "latest",
     "react": "^17.0.2",
