--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@mui/material": "^5.4.3",
     "@reduxjs/toolkit": "^1.7.2",
     "axios": "^0.26.0",
+    "bcrypt": "^5.0.1",
+    "cookie": "^0.4.2",
     "date-fn": "^0.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.3",
@@ -18,13 +20,13 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.0",
-    "bcrypt": "^5.0.1",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
