--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.0.1",
     "cookie": "^0.4.2",
     "date-fn": "^0.0.2",
+    "firebase": "^9.6.8",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.3",
     "next": "latest",
