--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie": "^0.4.2",
     "date-fn": "^0.0.2",
     "firebase": "^9.6.8",
+    "jose": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.3",
     "next": "latest",
