--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.0.1",
     "cookie": "^0.4.2",
     "date-fn": "^0.0.2",
+    "date-fns": "^2.28.0",
     "firebase": "^9.6.8",
     "jose": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
