--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "redux-persist": "^6.0.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
