--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^9.6.8",
     "jose": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.4.1",
     "mongoose": "^6.2.3",
     "next": "latest",
     "react": "^17.0.2",
