--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@
 # next.js
 /.next/
 /out/
-next.config.js
 
 # production
 /build
@@ -24,6 +23,7 @@ next.config.js
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
 # local env files
 .env.local
@@ -33,6 +33,3 @@ yarn-error.log*
 
 # vercel
 .vercel
-
-# typescript
-*.tsbuildinfo
