--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-loading-skeleton": "^3.0.3",
     "react-redux": "^7.2.6",
     "redux-persist": "^6.0.0",
     "tailwind-scrollbar-hide": "^1.1.7"
